--- a/.env
+++ b/.env
@@ -1,18 +1,9 @@
-TYPEORM_CONNECTION = mysql
-TYPEORM_HOST = localhost
-TYPEORM_USERNAME = root
-TYPEORM_PASSWORD = 
-TYPEORM_DATABASE = lab_books_graphql
-TYPEORM_PORT = 3306
-
-TYPEORM_SYNCHRONIZE = true
+TYPEORM_CONNECTION = sqlite
+TYPEORM_DATABASE = src/db/data/sqlite.db
 TYPEORM_LOGGING = true
-
 TYPEORM_ENTITIES = src/db/models/*.entity.ts
 TYPEORM_MIGRATIONS = src/db/migrations/*.ts
 TYPEORM_MIGRATIONS_RUN = src/db/migrations
-
 TYPEORM_ENTITIES_DIR = src/db/models
 TYPEORM_MIGRATIONS_DIR = src/db/migrations
-
 EXPRESS_PORT = 3000
