--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 TYPEORM_CONNECTION = sqlite
 TYPEORM_DATABASE = src/db/data/sqlite.db
 TYPEORM_LOGGING = true
-TYPEORM_ENTITIES = src/db/models/*.entity.ts
+TYPEORM_ENTITIES = src/modules/**/*.entity.ts
+TYPEORM_ENTITIES_DIR = src/modules/**
 TYPEORM_MIGRATIONS = src/db/migrations/*.ts
-TYPEORM_MIGRATIONS_RUN = src/db/migrations
-TYPEORM_ENTITIES_DIR = src/db/models
 TYPEORM_MIGRATIONS_DIR = src/db/migrations
+TYPEORM_MIGRATIONS_RUN = src/db/migrations
 EXPRESS_PORT = 3000
