Reestruturação por módulo

--- a/.env
+++ b/.env
@@ -1,9 +1,11 @@
 TYPEORM_CONNECTION = sqlite
-TYPEORM_DATABASE = src/db/data/sqlite.db
+TYPEORM_DATABASE = data/financeiro_uniproof_db1.sqlite
+
 TYPEORM_LOGGING = true
+
 TYPEORM_ENTITIES = src/modules/**/*.entity.ts
 TYPEORM_ENTITIES_DIR = src/modules/**
-TYPEORM_MIGRATIONS = src/db/migrations/*.ts
-TYPEORM_MIGRATIONS_DIR = src/db/migrations
-TYPEORM_MIGRATIONS_RUN = src/db/migrations
-EXPRESS_PORT = 3000
+
+TYPEORM_MIGRATIONS = src/modules/Database/migrations/*.ts
+TYPEORM_MIGRATIONS_DIR = src/modules/Database/migrations
+TYPEORM_MIGRATIONS_RUN = src/modules/Database/migrations
