Alteração da Arquitetura

--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ TYPEORM_LOGGING = true
 TYPEORM_ENTITIES = src/modules/**/*.entity.ts
 TYPEORM_ENTITIES_DIR = src/modules/**
 
-TYPEORM_MIGRATIONS = src/modules/Database/migrations/*.ts
-TYPEORM_MIGRATIONS_DIR = src/modules/Database/migrations
-TYPEORM_MIGRATIONS_RUN = src/modules/Database/migrations
+TYPEORM_MIGRATIONS = src/Database/migrations/*.ts
+TYPEORM_MIGRATIONS_DIR = src/Database/migrations
+TYPEORM_MIGRATIONS_RUN = src/Database/migrations
