--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 TYPEORM_CONNECTION = sqlite
-TYPEORM_DATABASE = data/financeiro_uniproof_db1.sqlite
+TYPEORM_DATABASE = data/lab_graphql_db1.sqlite
 
 TYPEORM_LOGGING = true
 
