--- a/.env__
+++ b/.env__
@@ -1,7 +1,8 @@
 TYPEORM_CONNECTION = sqlite
 TYPEORM_DATABASE = data/lab_graphql_db1.sqlite
 
-TYPEORM_LOGGING = true
+TYPEORM_SYNCHRONIZE = true
+TYPEORM_LOGGING = false
 
 TYPEORM_ENTITIES = src/modules/**/*.entity.ts
 TYPEORM_ENTITIES_DIR = src/modules/**
